[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desmondtools"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = ["pyparsing>=3.0", "dotmap>=1.3", "pandas", "numpy", "pytest"]
authors = [{name = "Sung-Hun Bae", email="sunghun.bae@gmail.com"}, ]
maintainers = [{name = "Sung-Hun Bae", email="sunghun.bae@gmail.com"}, ]
description = "Tools for Desmond molecular dynamics"
readme = "README.md"
license = "MIT"
keywords = ["Desmond", "Multisim", "Molecular Dynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage        = "https://github.com/sunghunbae/desmondtools"
Repository      = "https://github.com/sunghunbae/desmondtools.git"
Issues          = "https://github.com/sunghunbae/desmondtools/issues"
Changelog       = "https://github.com/sunghunbae/desmondtools/blob/master/CHANGELOG.md"
Documentation   = "https://sunghunbae.github.io/desmondtools/"

[project.scripts]
batch-desmond-mdinfo    = "desmondtools.cli:batch_mdinfo"
batch-desmond-maeinfo   = "desmondtools.cli:batch_maeinfo"
batch-desmond-cmsinfo   = "desmondtools.cli:batch_cmsinfo"
batch-desmond-cms2dcd   = "desmondtools.cli:batch_cms2dcd"
batch-desmond-setup     = "desmondtools.cli:batch_setup"
batch-desmond-md        = "desmondtools.cli:batch_md"
batch-desmond-min       = "desmondtools.cli:batch_min"
batch-desmond-metad     = "desmondtools.cli:batch_metad"
batch-desmond-pli       = "desmondtools.cli:batch_pli"
batch-desmond-report    = "desmondtools.cli:batch_report"
batch-desmond-distance  = "desmondtools.cli:batch_distance"
batch-desmond-dihedral  = "desmondtools.cli:batch_dihedral"
batch-desmond-ligrmsd   = "desmondtools.cli:batch_ligrmsd"
batch-desmond-rg        = "desmondtools.cli:batch_rg"
batch-desmond-rmsx      = "desmondtools.cli:batch_rmsx"
batch-desmond-mmgbsa    = "desmondtools.cli:batch_mmgbsa"

[tool.setuptools.dynamic]
version = {attr = "desmondtools.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"desmondtools" = ["*.cfg", "*.msj", "*.eaf"]
"desmondtools.script" = ["*.py", ".tcl"]
